kubernetes/apps/ai/litellm/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
  labels:
    app: litellm
spec:
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm:main-latest # it is recommended to fix a version generally
          ports:
            - name: http
              containerPort: 4000
          imagePullPolicy: Always
          args:
            - "--config"
            - "/app/proxy_config.yaml" # Update the path to mount the config file
          volumeMounts:
            - name: config-volume
              mountPath: /app/proxy_config.yaml
              subPath: config.yaml
          resources:
            limits:
              cpu: 10m
              memory: 2Gi
      volumes:
        - name: config-volume
          configMap:
            name: litellm-config-file
