kubernetes/apps/ai/litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
spec:
  type: LoadBalancer
  selector:
    app: litellm
  externalTrafficPolicy: Local
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
