kubernetes/apps/ai/litellm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "litellm.${domain}"
      secretName: "tls-litellm"
  rules:
    - host: "litellm.${domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: litellm
                port:
                  number: 4000
